# ai-proxy

./: .env  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  gravitee  index.html  pyproject.toml  pytest.ini  requirements.in  requirements.txt  test_live.py  test_validation.py
contracts/: openapi.yaml
docs/: ID-google-token-obtainment  PLAYBOOK.md  api-contract.md  gravitee-configuration.md  gravitee-observability.md  llm-secret-management.md  run-tests.md  structured-logging.md
docs/runbooks/: Documentation_test.md  gravitee-validation-runbook.md  llm-secret-management-runbook.md  run-tests.md  structured-logging-validation-runbook.md
google-chat/: readme.md
gravitee/: README.md
observability/: readme.md
proxy/: Documentation_test.md
proxy/app/: errors.py  llm_abstract_client.py  llm_client.py  main.py  prompt.py  router.py
proxy/app/core/: auth.py  secrets.py  settings.py
proxy/app/dependencies/: security.py
proxy/app/schemas/: __init__.py  meeting_summary.py
proxy/test/: .test_injection.py.swp  documentation-tests.md  readme.md  test_abuse.py  test_abuse_mock.py  test_integration.py  test_integration_mock.py  test_llm_client_mock.py  test_meeting_summary.py  test_prompt.py  test_validation.py
proxy/test/integration/: test_abuse_integration.py  test_integration.py  test_integration_mock.py  test_meeting_summary_auth.py  test_meeting_summary_domain_access.py
proxy/test/unit/: test_abuse_unit.py  test_google_token_auth.py  test_llm_client_mock.py  test_prompt.py  test_validation.py  test_workspace_domain.py
